--- a/CPP/C-C++02_常用函数.md
+++ b/CPP/C-C++02_常用函数.md
@@ -1,31 +1,332 @@
-## __sync_fetch_and_add()
+## 简介
 
-+ 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`相加并将结果存入到`*ptr`
-+ 声明：`type __sync_fetch_and_add (type *ptr, type value, ...)`
++ 常用函数，大部分为C函数
 
-## __sync_fetch_and_sub()
+## popen
 
-+ 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`相减并将结果存入到`*ptr`
-+ 声明：`type __sync_fetch_and_sub (type *ptr, type value, ...)`
++ 简介：
+  + popen()是一个C标准库函数，用于在一个新进程中执行shell命令，并创建一个管道来与该进程通信
 
-## __sync_fetch_and_or()
++ 原型：
+```cpp
+FILE* popen(const char* command, const char* mode);
+```
 
-+ 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`做按位或运算，并将结果存入到`*ptr`
-+ 声明：`type __sync_fetch_and_or (type *ptr, type value, ...)`
++ 参数：
+  + command：要执行的shell命令。
+  + mode：操作模式，可以是"r"（读取模式）或"w"（写入模式）
 
-## __sync_and_and_fetch()
++ 返回值：
+  + 如果成功，返回一个指向FILE结构的指针，用于后续与新进程之间的读写操作
+  + 如果失败，返回NULL
 
-+ 简述：先将`*ptr`与`val`做按位与运算，返回操作之后的值
-+ 声明：`type __sync_add_and_fetch (type *ptr, type value, ...)`
++ 详解：
+  + 函数功能：
+    + popen()函数通过创建一个新的进程来执行指定的shell命令，并返回一个指向FILE结构的指针。该FILE结构可以用于后续的读取或写入操作。新进程的标准输入或标准输出将通过管道与调用进程进行通信
+  + 操作模式
+    + "r"：读取模式，用于从新进程的标准输出读取数据。
+    + "w"：写入模式，用于向新进程的标准输入写入数据
+  + 注意事项
+    + 使用popen()函数执行shell命令时，请确保命令参数是可信的，以防止命令注入等安全问题。
+    + 在使用完popen()函数后，应该使用pclose()函数关闭由popen()创建的管道
 
-## __sync_bool_compare_and_swap(), __sync_val_compare_and_swap()
++ 示例：
+```cpp
+/*下面是一个简单的示例，演示如何使用popen()函数执行shell命令并读取输出：*/
+#include <iostream>
+#include <cstdio>
 
-+ 简述：这两个函数提供原子的比较和交换，如果`*ptr`与`oldval`相等，就将`newval`写入到`*ptr`
-+ 声明：
-  + `bool __sync_bool_compare_and_swap(type *ptr, type oldval, type newval,...);`
-    + 在相等并且写入成功的情况下，返回true；否则返回false；
-  + `type __sync_val_compare_and_swap(type *ptr, type oldval, type newval,...);`
-    + 返回写入之前的值
+int main() {
+    const char* command = "ls -l";
+    const char* mode = "r";
+
+    FILE* pipe = popen(command, mode);
+    if (pipe) {
+        char buffer[128];
+        while (!feof(pipe) && fgets(buffer, sizeof(buffer), pipe) != nullptr) {
+            std::cout << buffer;
+        }
+        pclose(pipe);
+    } else {
+        std::cout << "Command execution failed." << std::endl;
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例执行ls -l命令，并将命令的输出打印到控制台
+
+## __sync_fetch_and_add
+
+<!-- + 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`相加并将结果存入到`*ptr`
++ 声明：`type __sync_fetch_and_add (type *ptr, type value, ...)` -->
+
++ 简介：
+  + __sync_fetch_and_add() 是一个GCC内置函数，用于实现原子的自增操作。它可以用于多线程环境下对共享变量进行原子操作，确保操作的原子性和可见性
+
++ 原型：
+```cpp
+T __sync_fetch_and_add(T* ptr, T value);
+```
+
++ 参数：
+  + ptr：指向共享变量的指针。
+  + value：要添加到共享变量的值
+
++ 返回值：
+  + 返回执行自增操作前的共享变量的值
+
++ 详解：
+  + 函数功能：
+    + __sync_fetch_and_add() 函数用于对给定的共享变量进行原子的自增操作。它将指定的值（value）添加到共享变量（通过指针 ptr 引用）中，并返回执行自增操作前的共享变量的值。
+  + 原子操作的特性确保了多个线程对同一共享变量进行自增操作时的正确性。该操作在执行期间不会被中断，以确保其他线程不会在此期间修改共享变量的值
+
++ 示例：
+```cpp
+/*下面是一个简单的示例，演示了如何使用 __sync_fetch_and_add() 函数对共享变量进行原子的自增操作*/
+#include <iostream>
+
+int main() {
+    int sharedVariable = 0;
+
+    for (int i = 0; i < 10; i++) {
+        int previousValue = __sync_fetch_and_add(&sharedVariable, 1);
+        std::cout << "Previous value: " << previousValue << ", New value: " << sharedVariable << std::endl;
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例使用 __sync_fetch_and_add() 函数对共享变量 sharedVariable 进行了10次原子的自增操作。每次自增操作都会打印出执行自增前的值和执行自增后的值
+
+## __sync_fetch_and_sub
+
+<!-- + 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`相减并将结果存入到`*ptr`
++ 声明：`type __sync_fetch_and_sub (type *ptr, type value, ...)` -->
+
++ 简介：
+  + __sync_fetch_and_sub() 是一个GCC内置函数，用于实现原子的自减操作。它可以在多线程环境下对共享变量进行原子操作，确保操作的原子性和可见性
+
++ 原型：
+```cpp
+T __sync_fetch_and_sub(T* ptr, T value);
+```
+
++ 参数：
+  + ptr：指向共享变量的指针。
+  + value：要从共享变量减去的值
+
++ 返回值：
+  + 返回执行自减操作前的共享变量的值
+
++ 详解：
+  + 函数功能：
+    + __sync_fetch_and_sub() 函数用于对给定的共享变量进行原子的自减操作。它从共享变量（通过指针 ptr 引用）中减去指定的值（value），并返回执行自减操作前的共享变量的值
+  + 原子操作的特性确保了多个线程对同一共享变量进行自减操作时的正确性。该操作在执行期间不会被中断，以确保其他线程不会在此期间修改共享变量的值
+
++ 示例：
+```cpp
+/*下面是一个简单的示例，演示了如何使用 __sync_fetch_and_sub() 函数对共享变量进行原子的自减操作*/
+#include <iostream>
+
+int main() {
+    int sharedVariable = 10;
+
+    for (int i = 0; i < 10; i++) {
+        int previousValue = __sync_fetch_and_sub(&sharedVariable, 1);
+        std::cout << "Previous value: " << previousValue << ", New value: " << sharedVariable << std::endl;
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例使用 __sync_fetch_and_sub() 函数对共享变量 sharedVariable 进行了10次原子的自减操作。每次自减操作都会打印出执行自减前的值和执行自减后的值
+
+## __sync_fetch_and_or
+
+<!-- + 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`做按位或运算，并将结果存入到`*ptr`
++ 声明：`type __sync_fetch_and_or (type *ptr, type value, ...)` -->
+
++ 简介：
+  + __sync_fetch_and_or() 是一个GCC内置函数，用于实现原子的按位或操作。它可以在多线程环境下对共享变量进行原子操作，确保操作的原子性和可见性
+
++ 原型：
+```cpp
+T __sync_fetch_and_or(T* ptr, T value);
+```
+
++ 参数：
+  + ptr：指向共享变量的指针。
+  + value：要进行按位或操作的值
+
++ 返回值：
+  + 返回执行按位或操作前的共享变量的值
+
++ 详解：
+  + 函数功能：
+    + __sync_fetch_and_or() 函数用于对给定的共享变量进行原子的按位或操作。它将指定的值（value）与共享变量（通过指针 ptr 引用）进行按位或操作，并返回执行按位或操作前的共享变量的值
+  + 原子操作的特性确保了多个线程对同一共享变量进行按位或操作时的正确性。该操作在执行期间不会被中断，以确保其他线程不会在此期间修改共享变量的值
+
++ 示例：
+```cpp
+/* 下面是一个简单的示例，演示了如何使用 __sync_fetch_and_or() 函数对共享变量进行原子的按位或操作*/
+#include <iostream>
+
+int main() {
+    int sharedVariable = 0b1100;  // 初始值为 12，二进制为 1100
+
+    int newValue = 0b0011;  // 要进行按位或操作的值，二进制为 0011
+
+    int previousValue = __sync_fetch_and_or(&sharedVariable, newValue);
+    std::cout << "Previous value: " << previousValue << ", New value: " << sharedVariable << std::endl;
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例使用 __sync_fetch_and_or() 函数对共享变量 sharedVariable 进行了原子的按位或操作。在示例中，共享变量初始值为 12，二进制表示为 1100，要进行按位或操作的值为 3，二进制表示为 0011。执行按位或操作后，共享变量的值变为 15，二进制表示为 1111。示例中打印出了执行按位或操作前的值和执行按位或操作后的值
+
+
+## __sync_and_and_fetch
+
+<!-- + 简述：先将`*ptr`与`val`做按位与运算，返回操作之后的值
++ 声明：`type __sync_add_and_fetch (type *ptr, type value, ...)` -->
+
++ 简介：
+  + __sync_and_and_fetch() 是一个GCC内置函数，用于实现原子的按位与操作。它可以在多线程环境下对共享变量进行原子操作，确保操作的原子性和可见性
+
++ 原型：
+```cpp
+T __sync_and_and_fetch(T* ptr, T value);
+```
+
++ 参数：
+  + ptr：指向共享变量的指针。
+  + value：要进行按位与操作的值
+
++ 返回值：
+  + 返回执行按位与操作后的共享变量的值
+
++ 详解：
+  + 函数功能：
+    + __sync_and_and_fetch() 函数用于对给定的共享变量进行原子的按位与操作。它将指定的值（value）与共享变量（通过指针 ptr 引用）进行按位与操作，并返回执行按位与操作后的共享变量的值
+  + 原子操作的特性确保了多个线程对同一共享变量进行按位与操作时的正确性。该操作在执行期间不会被中断，以确保其他线程不会在此期间修改共享变量的值
+
++ 示例：
+```cpp
+/*下面是一个简单的示例，演示了如何使用 __sync_and_and_fetch() 函数对共享变量进行原子的按位与操作*/
+#include <iostream>
+
+int main() {
+    int sharedVariable = 0b1111;  // 初始值为 15，二进制为 1111
+
+    int value = 0b1100;  // 要进行按位与操作的值，二进制为 1100
+
+    int result = __sync_and_and_fetch(&sharedVariable, value);
+    std::cout << "Result: " << result << std::endl;
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例使用 __sync_and_and_fetch() 函数对共享变量 sharedVariable 进行了原子的按位与操作。在示例中，共享变量初始值为 15，二进制表示为 1111，要进行按位与操作的值为 12，二进制表示为 1100。执行按位与操作后，共享变量的值变为 12，二进制表示为 1100。示例中打印出了执行按位与操作后的值
+
+## __sync_bool_compare_and_swap
+
++ 简介：
+  + __sync_bool_compare_and_swap() 是一个GCC内置函数，用于实现原子的比较并交换操作。它可以在多线程环境下对共享变量进行原子操作，确保操作的原子性和可见性
+
++ 原型：
+```cpp
+bool __sync_bool_compare_and_swap(T* ptr, T oldval, T newval);
+```
+
++ 参数：
+  + ptr：指向共享变量的指针。
+  + oldval：期望的旧值。
+  + newval：要替换的新值
+
++ 返回值：
+  + 如果共享变量的当前值与旧值相等，则将新值赋给共享变量，并返回 true。
+  + 如果共享变量的当前值与旧值不相等，则不进行替换，并返回 false
+
++ 详解：
+  + 函数功能：
+    + __sync_bool_compare_and_swap() 函数用于比较共享变量的当前值与旧值是否相等，如果相等则替换为新值。该操作是原子的，确保在执行期间不会被中断，以确保其他线程不会在此期间修改共享变量的值
+  + 函数返回 true 表示替换操作成功，共享变量的值已被替换为新值。返回 false 表示替换操作失败，共享变量的值与旧值不相等，替换未执行
+
++ 示例：
+```cpp
+/*下面是一个简单的示例，演示了如何使用 __sync_bool_compare_and_swap() 函数进行原子的比较并交换操作*/
+#include <iostream>
+
+int main() {
+    int sharedVariable = 10;  // 共享变量的初始值为 10
+
+    int oldValue = 10;  // 期望的旧值
+    int newValue = 20;  // 要替换的新值
+
+    bool result = __sync_bool_compare_and_swap(&sharedVariable, oldValue, newValue);
+    std::cout << "Result: " << result << ", Shared variable: " << sharedVariable << std::endl;
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例使用 __sync_bool_compare_and_swap() 函数对共享变量 sharedVariable 进行了比较并交换操作。在示例中，共享变量初始值为 10，我们期望将其替换为新值 20。通过 __sync_bool_compare_and_swap() 函数，我们将共享变量的当前值与旧值 10 进行比较，如果相等则替换为新值 20。示例中打印出了操作的结果和最终的共享变量值
+
+## __sync_val_compare_and_swap
+
++ 简介：
+  + __sync_val_compare_and_swap() 是一个GCC内置函数，用于实现原子的比较并交换操作。它可以在多线程环境下对共享变量进行原子操作，确保操作的原子性和可见性
+
++ 原型：
+```cpp
+T __sync_val_compare_and_swap(T* ptr, T oldval, T newval);
+```
+
++ 参数：
+  + ptr：指向共享变量的指针。
+  + oldval：期望的旧值。
+  + newval：要替换的新值
+
++ 返回值：
+  + 返回共享变量在比较并交换操作之前的值
+
++ 详解：
+  + 函数功能：
+    + __sync_val_compare_and_swap() 函数用于比较共享变量的当前值与旧值是否相等，如果相等则替换为新值，并返回比较交换之前的共享变量的值。该操作是原子的，确保在执行期间不会被中断，以确保其他线程不会在此期间修改共享变量的值
+  + 函数返回共享变量在比较并交换操作之前的值，可以用于判断操作是否成功执行
+
++ 示例：
+```cpp
+/*下面是一个简单的示例，演示了如何使用 __sync_val_compare_and_swap() 函数进行原子的比较并交换操作*/
+#include <iostream>
+
+int main() {
+    int sharedVariable = 10;  // 共享变量的初始值为 10
+
+    int oldValue = 10;  // 期望的旧值
+    int newValue = 20;  // 要替换的新值
+
+    int result = __sync_val_compare_and_swap(&sharedVariable, oldValue, newValue);
+    std::cout << "Result: " << result << ", Shared variable: " << sharedVariable << std::endl;
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例使用 __sync_val_compare_and_swap() 函数对共享变量 sharedVariable 进行了比较并交换操作。在示例中，共享变量初始值为 10，我们期望将其替换为新值 20。通过 __sync_val_compare_and_swap() 函数，我们将共享变量的当前值与旧值 10 进行比较，如果相等则替换为新值 20，并返回比较交换之前的共享变量的值。示例中打印出了操作的结果和最终的共享变量值
 
 ## sleep()
 
@@ -408,13 +709,49 @@ int main() {
 
 ## atoi()
 
-+ 简述：把参数 str 所指向的字符串转换为一个整数（类型为 int 型）
+<!-- + 简述：把参数 str 所指向的字符串转换为一个整数（类型为 int 型）
 + 声明：`int atoi(const char *str);`
 + 参数：
   + `str`  -- 要转换为整数的字符串
 + 返回值：
   + 成功  --  返回转换后的整数
-  + 失败  --  返回零
+  + 失败  --  返回零 -->
+
++ 简介：
+  + atoi()是C++标准库中的一个函数，用于将字符串转换为整数。
+
++ 原型：
+```cpp
+int atoi(const char* str);
+```
+
++ 参数：
+  + str : 要转换为整数的字符串
+
++ 返回值：
+  + 如果转换成功，返回对应的整数值。
+  + 如果无法进行有效的转换，返回0
+
++ 详解：
+  + 函数功能
+    + atoi()函数会尝试将参数str解析为整数。它会从字符串的开头开始解析，直到遇到第一个非数字字符为止（或者字符串结束）。它会忽略前导空格字符。如果字符串为空或无法进行有效的转换，atoi()会返回0
+  + 注意事项
+    + atoi()函数只能转换纯整数字符串，它不能处理带有小数点、指数符号或其他非数字字符的字符串。
+    + 如果字符串表示的整数超出了int类型的范围，结果可能是未定义的。
+    + 为了更安全和更灵活的字符串转换，可以使用C++11引入的std::stoi()函数或更高级的字符串转换库，如Boost库中的boost::lexical_cast
+
++ 示例：
+```cpp
+#include <iostream>
+#include <cstdlib>
+
+int main() {
+    const char* str = "12345";
+    int num = atoi(str);
+    std::cout << "Converted integer: " << num << std::endl;
+    return 0;
+}
+```
 
 ## atol()
 
