--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,273 @@
 # 概述 -- 理论基础知识
 
++ C++ 相关的理论基础知识
+
+## std::map 
+
+C++11 中的 `std::map` 是一个关联容器，它提供了一种键值对的映射关系。`std::map` 使用红黑树数据结构实现，保证了插入、查找和删除操作的平均时间复杂度为 O(log n)。
+
+`std::map` 的特点如下：
+
+1. **唯一键值对**：`std::map` 中的键值对是唯一的，即每个键只能对应一个值。如果插入重复的键，则新的值会覆盖旧的值。
+
+2. **排序**：`std::map` 中的元素默认按照键的升序进行排序，可以自定义比较函数来指定排序规则。
+
+3. **动态扩展**：`std::map` 是动态扩展的，可以根据需要插入、删除元素，并根据键的值自动调整数据结构。
+
+4. **快速查找**：通过键查找值的操作在平均情况下具有较快的速度，时间复杂度为 O(log n)。
+
+下面是一些常用的 `std::map` 操作：
+
+- 插入元素：使用 `insert()` 函数将一个键值对插入到 `std::map` 中。
+
+```cpp
+std::map<int, std::string> myMap;
+myMap.insert(std::make_pair(1, "one"));
+myMap.insert(std::pair<int, std::string>(2, "two"));
+```
+
+- 访问元素：通过键访问值，使用 `operator[]` 或 `at()` 函数。
+
+```cpp
+std::cout << myMap[1] << std::endl;  // 输出 "one"
+std::cout << myMap.at(2) << std::endl;  // 输出 "two"
+```
+
+- 查找元素：使用 `find()` 函数查找指定的键。
+
+```cpp
+auto it = myMap.find(1);
+if (it != myMap.end()) {
+    std::cout << "Found element: " << it->second << std::endl;
+} else {
+    std::cout << "Element not found" << std::endl;
+}
+```
+
+- 删除元素：使用 `erase()` 函数删除指定的键。
+
+```cpp
+myMap.erase(1);
+```
+
+- 遍历元素：可以使用迭代器来遍历 `std::map` 中的所有键值对。
+
+```cpp
+for (auto it = myMap.begin(); it != myMap.end(); ++it) {
+    std::cout << it->first << " : " << it->second << std::endl;
+}
+```
+
+上述示例代码只是 `std::map` 的一些常见操作，还有许多其他的函数和特性可以进一步探索和应用。
+
+---
+
+## std::shared_ptr 
+
+`std::shared_ptr` 是 C++11 中引入的一种共享式智能指针，用于管理动态分配的对象。它具有以下特点和用法：
+
+1. 共享所有权：`std::shared_ptr` 允许多个智能指针共享同一个对象的所有权。当最后一个 `std::shared_ptr` 被销毁时，它会自动释放所管理的对象。
+
+2. 引用计数：`std::shared_ptr` 内部维护一个引用计数器，用于记录当前有多少个 `std::shared_ptr` 共享同一个对象。每次创建或拷贝一个 `std::shared_ptr`，计数器加一；当销毁或重置一个 `std::shared_ptr`，计数器减一。当计数器变为零时，即没有 `std::shared_ptr` 指向对象时，对象会被销毁。
+
+3. 安全地使用动态分配的对象：`std::shared_ptr` 提供了自动内存管理，可以避免内存泄漏和悬挂指针等问题。它确保了在不需要对象时正确释放资源。
+
+4. 自定义删除器：可以使用自定义的删除器来释放资源。删除器是一个可调用对象，用于替代默认的 `delete` 运算符。这允许在对象销毁时执行特定的清理操作。
+
+以下是一些 `std::shared_ptr` 的用法示例：
+
+```cpp
+// 创建一个 std::shared_ptr 并分配内存
+std::shared_ptr<int> ptr(new int(42));
+
+// 使用智能指针操作所管理的对象
+*ptr = 10;
+std::cout << *ptr << std::endl;
+
+// 创建多个 std::shared_ptr 共享同一个对象
+std::shared_ptr<int> ptr2 = ptr;
+
+// 获取共享指针的引用计数
+std::cout << "Reference count: " << ptr.use_count() << std::endl;
+
+// 重置 std::shared_ptr，引用计数减一
+ptr.reset();
+
+// 获取共享指针的引用计数
+std::cout << "Reference count: " << ptr2.use_count() << std::endl;
+
+// 使用 std::make_shared 创建 std::shared_ptr
+auto ptr3 = std::make_shared<int>(100);
+
+// 使用自定义删除器释放资源
+std::shared_ptr<FILE> file(fopen("file.txt", "r"), fclose);
+```
+
+`std::shared_ptr` 提供了方便且安全的共享资源管理方式。它适用于多个智能指针需要共享同一个对象所有权的场景，如多个函数间共享资源、构建数据结构等。
+
+需要注意的是，`std::shared_ptr` 的引用计数机制可能会带来额外的开销，并且可能导致循环引用的问题。在存在循环引用的情况下，需要使用 `std::weak_ptr` 来打破循环引用关系。
+
+---
+
+## std::unique_ptr 
+
+`std::unique_ptr` 是 C++11 中引入的一种独占式智能指针，用于管理动态分配的对象。它具有以下特点和用法：
+
+1. 独占所有权：`std::unique_ptr` 用于管理对象的独占所有权，即同一时间只能有一个 `std::unique_ptr` 指向对象。当 `std::unique_ptr` 被销毁时，它所管理的对象也会被自动释放。
+
+2. 禁止复制：`std::unique_ptr` 是不可复制的，这意味着不能通过复制构造函数或赋值运算符将其值传递给其他 `std::unique_ptr` 对象。这样做是为了确保只有一个 `std::unique_ptr` 拥有资源的所有权。
+
+3. 支持移动语义：可以使用 `std::move` 函数将所有权从一个 `std::unique_ptr` 转移给另一个 `std::unique_ptr`。移动语义避免了资源的拷贝开销，并将所有权转移给新的 `std::unique_ptr`。
+
+4. 自动释放资源：当 `std::unique_ptr` 超出其作用域时，它会自动调用 `delete` 运算符来释放所管理的对象。这确保了资源的正确释放，避免了内存泄漏。
+
+以下是一些 `std::unique_ptr` 的用法示例：
+
+```cpp
+// 创建一个 std::unique_ptr 并分配内存
+std::unique_ptr<int> ptr(new int(42));
+
+// 使用智能指针操作所管理的对象
+*ptr = 10;
+std::cout << *ptr << std::endl;
+
+// 转移所有权给另一个 std::unique_ptr
+std::unique_ptr<int> ptr2 = std::move(ptr);
+
+// 检查指针是否为空
+if (ptr2) {
+    // 指针不为空
+} else {
+    // 指针为空
+}
+
+// 释放指针所管理的对象（可以手动释放，但不推荐）
+ptr2.reset();
+
+// 使用 std::make_unique 创建 std::unique_ptr
+auto ptr3 = std::make_unique<int>(100);
+```
+
+`std::unique_ptr` 在管理动态内存时提供了更高的安全性和便利性，可以避免内存泄漏和悬挂指针等问题。它是现代 C++ 中推荐使用的智能指针之一。
+
+需要注意的是，由于 `std::unique_ptr` 是独占所有权的，它不能与 C 风格的指针混用，并且需要避免多个 `std::unique_ptr` 指向同一个对象的情况，以避免悬挂指针的问题。
+
+---
+
+## C++11 智能指针
+
+C++11 引入了智能指针（Smart Pointer）的概念，这些指针用于管理动态分配的内存资源，以减少内存泄漏和悬挂指针等问题。C++11 提供了三种类型的智能指针：`std::unique_ptr`、`std::shared_ptr` 和 `std::weak_ptr`。
+
+1. `std::unique_ptr`：
+   - `std::unique_ptr` 用于管理独占所有权的指针，即只有一个 `std::unique_ptr` 可以拥有指针所指向的对象。
+   - 使用 `std::unique_ptr` 可以确保资源在不再需要时被正确释放，因为它在销毁时会自动调用 `delete` 运算符来释放内存。
+   - `std::unique_ptr` 不能被复制，但可以通过 `std::move` 来转移所有权。
+   - 示例代码：
+     ```cpp
+     std::unique_ptr<int> ptr(new int(10));
+     ```
+
+2. `std::shared_ptr`：
+   - `std::shared_ptr` 用于管理共享所有权的指针，即多个 `std::shared_ptr` 可以共同拥有指针所指向的对象。
+   - 它使用引用计数来跟踪对象的使用情况，并在引用计数变为零时自动释放内存。
+   - `std::shared_ptr` 可以通过 `std::make_shared` 函数创建，也可以通过复制或移动构造函数进行初始化。
+   - 示例代码：
+     ```cpp
+     std::shared_ptr<int> ptr1 = std::make_shared<int>(10);
+     std::shared_ptr<int> ptr2 = ptr1;
+     ```
+
+3. `std::weak_ptr`：
+   - `std::weak_ptr` 用于解决 `std::shared_ptr` 的循环引用问题。
+   - 它允许共享对象的访问，但不会增加引用计数。因此，即使存在 `std::weak_ptr`，对象也可能被释放。
+   - 通过调用 `std::weak_ptr` 的 `lock` 函数，可以获取一个有效的 `std::shared_ptr` 来访问对象。
+   - 示例代码：
+     ```cpp
+     std::shared_ptr<int> sharedPtr = std::make_shared<int>(10);
+     std::weak_ptr<int> weakPtr = sharedPtr;
+     std::shared_ptr<int> sharedPtr2 = weakPtr.lock();
+     ```
+
+智能指针的使用可以避免手动管理动态内存的复杂性，减少内存泄漏和悬挂指针的风险，并提高代码的安全性和可维护性。
+
+注意：尽管智能指针可以帮助管理内存资源，但仍需要谨慎使用，并注意避免循环引用等问题，以避免内存泄漏。
+
+---
+
+## virtual 关键字
+
+在C++中，`virtual` 是一个关键字，用于声明虚函数（virtual function）。虚函数是用于实现多态性（polymorphism）的一种机制，在面向对象的编程中非常重要。
+
+当一个类的成员函数被声明为虚函数时，它可以在派生类中被重写（override），并且在运行时根据对象的实际类型来调用相应的函数。这意味着，通过基类的指针或引用调用虚函数时，实际上会调用派生类中的函数，而不是基类中的函数。
+
+虚函数的声明方式是在函数的声明前加上 `virtual` 关键字。例如：
+
+```cpp
+class Base {
+public:
+    virtual void foo() {
+        // 函数体
+    }
+};
+
+class Derived : public Base {
+public:
+    void foo() override {
+        // 函数体
+    }
+};
+```
+
+在上面的示例中，`Base` 类中的 `foo()` 函数被声明为虚函数，而 `Derived` 类中的 `foo()` 函数被重写。通过基类的指针或引用调用 `foo()` 函数时，实际执行的是派生类 `Derived` 中的函数。
+
+虚函数的使用有以下几个要点：
+
+1. 虚函数只能在类的成员函数中声明，并且只能在类的层次结构中使用。
+2. 虚函数可以被继承，派生类可以重写基类中的虚函数。
+3. 虚函数可以通过基类的指针或引用进行动态绑定，实现多态性。
+4. 虚函数可以被纯虚函数（pure virtual function）和抽象类（abstract class）使用。
+
+需要注意的是，虚函数带来了一定的运行时开销，因为需要进行动态绑定。因此，应当合理使用虚函数，避免过度使用导致性能下降。
+
+---
+
+## pragma 
+
+`#pragma`是一个预处理指令，用于向编译器发出特定的指示或控制编译过程中的行为。`#pragma`指令是与编译器相关的，因此其具体行为和支持的功能取决于使用的编译器。
+
+在C++中，`#pragma`指令可以用于各种目的，如优化控制、警告控制、库导入等。以下是一些常见的`#pragma`指令用法：
+
+1. 警告控制：可以使用`#pragma warning`指令来控制编译器的警告行为。
+
+```cpp
+#pragma warning(disable: 1234)  // 禁用警告编号为1234的警告
+#pragma warning(push)          // 将当前警告状态压入堆栈
+#pragma warning(pop)           // 恢复之前的警告状态
+```
+
+2. 优化控制：可以使用`#pragma optimize`指令来控制编译器的优化级别。
+
+```cpp
+#pragma optimize("g", off)    // 关闭所有优化
+#pragma optimize("s", on)     // 启用小规模优化
+```
+
+3. 区域控制：可以使用`#pragma region`和`#pragma endregion`指令来定义和折叠代码区域。
+
+```cpp
+#pragma region MyCode
+// 这里是一段代码
+#pragma endregion
+```
+
+4. 其他用途：不同的编译器可能支持其他特定的`#pragma`指令，用于特定的功能或行为。
+
+需要注意的是，`#pragma`指令的具体行为和支持的选项因编译器而异。为了保持代码的可移植性，应当避免过度依赖于特定的`#pragma`指令。
+
+总之，`#pragma`是C++编译器提供的一种扩展机制，可以用于控制编译过程中的行为和特定功能的使用。使用时应查阅所使用编译器的文档，了解支持的指令和选项。
+
+---
+
 ## 线程 分类
 
 在C++中，线程可以根据不同的特性和使用方式进行分类。以下是几种常见的线程分类：
