--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,79 @@
 ## C/C++ 常用编程技巧
 
++ 常用的编程技巧，使用示例与方法
+
+## 通过进程号 杀死指定进程
+
+在Linux中，可以使用C++编写程序来杀死指定的进程。以下是一个简单的示例：
+
+```cpp
+#include <unistd.h>
+#include <signal.h>
+#include <iostream>
+
+int main() {
+    pid_t pid = 12345;  // 要杀死的进程的PID
+
+    // 发送SIGKILL信号来终止指定的进程
+    if (kill(pid, SIGKILL) == 0) {
+        std::cout << "进程已成功终止" << std::endl;
+    } else {
+        std::cerr << "无法终止进程" << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在示例中，`pid` 变量存储了要杀死的进程的PID，可以根据需要修改为实际的PID。然后，使用 `kill()` 函数向指定的进程发送 `SIGKILL` 信号来终止进程。如果 `kill()` 函数返回值为0，表示成功终止进程；如果返回值为-1，表示无法终止进程。
+
+请注意，杀死进程需要足够的权限。如果您的程序没有足够的权限，可能会导致无法终止指定的进程。
+
+---
+
+## 通过进程名 查找进程id
+
++ 使用popen函数和pgrep命令来执行进程名的查找，并读取输出获取进程ID
+
+```cpp
+#include <stdio.h>
+#include <unistd.h>
+#include <string.h>
+#include <string>
+#include <iostream>
+#include <cstdlib>
+#include <cstdio>
+#include <cstring>
+
+pid_t findProcessIdByName(const char* processName) {
+    char command[256];
+    sprintf(command, "pgrep -f %s", processName);
+    FILE* fp = popen(command, "r");
+    if (fp != nullptr) {
+        char buffer[16];
+        if (fgets(buffer, sizeof(buffer), fp)) {
+            pclose(fp);
+            return atoi(buffer);
+        }
+        pclose(fp);
+    }
+    return -1;
+}
+
+int main () 
+{
+    std::string program_name {"vca.exe"};
+
+    pid_t p; 
+    p = findProcessIdByName(program_name.c_str());
+    std::cerr << "Program : " << program_name << ", pid: " << p << std::endl;
+
+    return 0;
+}
+```
+
+---
+
 ## 生成随机序列 字母 数字 混合
 
 要生成指定大小的随机数字和字符混合序列，可以结合随机数生成器、字符操作和条件判断来实现。
