--- a/CPP/C-C++02_常用函数.md
+++ b/CPP/C-C++02_常用函数.md
@@ -330,44 +330,238 @@ int main() {
 
 ## sleep()
 
-+ 简述：睡眠函数
+<!-- + 简述：睡眠函数
 + 声明：`unsigned int sleep(unsigned int __seconds);`
 + 参数：
   + `__seconds`  --  睡眠的时间，单位为秒
 + 注意：
-  + 需要包含头文件：`<unistd.h>`
+  + 需要包含头文件：`<unistd.h>` -->
+
++ 简介：
+  + sleep() 函数是用于在指定的时间内使程序暂停执行的函数。它可以用于创建一定的延迟或控制程序的执行速度
+
++ 原型：
+```cpp
+#include <unistd.h>
+unsigned int sleep(unsigned int seconds);
+```
+
++ 参数：
+  + seconds : 表示要暂停的秒数
+
++ 返回值：
+  + 如果函数成功暂停了指定的秒数，返回为 0。
+  + 如果函数由于被信号中断而返回，则返回剩余的秒数
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <unistd.h>
+
+int main() {
+    printf("Start\n");
+
+    // 暂停 2 秒
+    sleep(2);
+
+    printf("End\n");
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，使用 sleep(2) 函数使程序暂停 2 秒。在输出 "Start" 后，程序会暂停 2 秒钟，然后输出 "End"
+  + sleep() 函数在头文件 unistd.h 中声明，并且是一个标准库函数。它会导致当前进程阻塞，即程序会进入睡眠状态，不会执行其他操作，直到指定的时间过去
+  + 需要注意的是，sleep() 函数的时间精度是秒级别的，并且在暂停期间，程序会处于完全休眠状态，不会对其他任务进行处理。如果需要更精确的时间控制或需要同时处理其他任务，可以考虑使用定时器或多线程等机制来实现
+  + 另外，sleep() 函数在 POSIX 标准中定义，因此在不同的操作系统或编译器中可能会有一些差异。在特定平台或环境下使用 sleep() 函数时，建议查看相应的文档和标准以获取更详细的信息
+
+---
 
 ## calloc()
 
-+ 简述：分配所需的内存空间,并返回一个指向它的指针
+<!-- + 简述：分配所需的内存空间,并返回一个指向它的指针
 + 声明：`void *calloc(size_t nitems, size_t size)`
 + 参数：
   + nitems -- 要被分配的元素的个数
   + size   -- 元素的大小
 + 注意：
-  + `malloc`和`calloc`之间的不同点是:`malloc`不会设置内存为零,而`calloc`会**设置分配的内存为零**
+  + `malloc`和`calloc`之间的不同点是:`malloc`不会设置内存为零,而`calloc`会**设置分配的内存为零** -->
+
++ 简介：
+  + calloc() 函数用于动态分配内存，并将分配的内存块初始化为零。它是 malloc() 函数的一种变体，用于分配连续的内存空间
+
++ 原型：
+```cpp
+#include <stdlib.h>
+void* calloc(size_t num, size_t size);
+```
+
++ 参数：
+  + num: 要分配的元素数量。
+  + size: 每个元素的大小（以字节为单位）
+
++ 返回值：
+  + 如果分配成功，返回指向分配内存块的指针（指向首字节的指针）。
+  + 如果分配失败，返回 NULL
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <stdlib.h>
+
+int main() {
+    int* arr;
+
+    // 分配包含 5 个整数的内存块，并初始化为零
+    arr = (int*)calloc(5, sizeof(int));
+    if (arr == NULL) {
+        printf("内存分配失败\n");
+        return 1;
+    }
+
+    // 输出分配的内存块中的值
+    for (int i = 0; i < 5; i++) {
+        printf("%d ", arr[i]);
+    }
+    printf("\n");
+
+    // 释放内存块
+    free(arr);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，使用 calloc(5, sizeof(int)) 函数分配了包含 5 个整数的内存块，并将其初始化为零。返回的指针 arr 指向分配内存块的首字节
+  + calloc() 函数在头文件 stdlib.h 中声明，并且是一个标准库函数。它在内存分配时会自动将分配的内存块中的所有字节初始化为零值。这与使用 malloc() 函数后需要手动进行内存清零的过程相比，提供了方便和效率
+  + 需要注意的是，calloc() 函数返回的指针必须通过 free() 函数进行释放，以避免内存泄漏
+  + 另外，如果分配的内存块过大或者系统内存不足，calloc() 函数可能会分配失败，此时返回 NULL。在使用 calloc() 函数分配内存时，建议检查返回的指针是否为 NULL，以确保分配成功
+  + 总结而言，calloc() 函数是一种方便的内存分配函数，可以分配连续的内存块并初始化为零。在需要分配内存并初始化为零的情况下，可以考虑使用 calloc() 函数
+
+---
 
 ## strlen()
 
-+ 简述：计算字符串 `str` 的长度，直到空结束字符，但不包括空结束字符
+<!-- + 简述：计算字符串 `str` 的长度，直到空结束字符，但不包括空结束字符
 + 声明：`size_t strlen(const char *str);`
 + 参数：
   + `str` -- 要计算长度的字符串
 + 返回值：
   + 返回字符串的长度
 + 需求：
-  + 头文件：`#include <string.h>`
+  + 头文件：`#include <string.h>` -->
+
++ 简介：
+  + strlen() 函数用于计算字符串的长度，即字符串中字符的个数（不包括终止符 \0）
+
++ 原型：
+```cpp
+#include <string.h>
+size_t strlen(const char* str);
+```
+
++ 参数：
+  + str : 要计算长度的字符串，必须是以 \0 结尾的字符数组或字符指针
+
++ 返回值：
+  + 返回类型为 size_t（无符号整数），表示字符串的长度
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+    char str[] = "Hello, world!";
+    size_t length = strlen(str);
+    
+    printf("字符串的长度是：%zu\n", length);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，使用 strlen() 函数计算了字符串 str 的长度，并将结果存储在变量 length 中。然后，使用 printf() 函数打印字符串的长度
+  + strlen() 函数在头文件 string.h 中声明，并且是一个标准库函数。它通过逐个扫描字符，直到遇到字符串终止符 \0 来计算字符串的长度
+  + 需要注意的是，strlen() 函数只能用于以 \0 结尾的字符串。如果传递的字符串不是以 \0 结尾或者是一个空指针（NULL），则 strlen() 函数的行为是未定义的。因此，在使用 strlen() 函数时，必须确保字符串是以 \0 结尾的有效字符串
+  + 另外，由于 strlen() 函数返回的是 size_t 类型，因此在使用 %zu 格式符打印字符串的长度时，需要使用 size_t 类型的变量作为参数
+  + 总结而言，strlen() 函数是一种方便的计算字符串长度的函数，可以用于获取字符串中字符的个数（不包括终止符 \0）。在需要获取字符串长度的情况下，可以使用 strlen() 函数。
+
+---
 
 ## dup2()
 
-+ 简述：将 `fd` 复制到 `fd2`，关闭 `fd2` 并使其在同一文件上打开
+<!-- + 简述：将 `fd` 复制到 `fd2`，关闭 `fd2` 并使其在同一文件上打开
 + 声明：`int dup2 (int fd, int fd2);`
 + 参数：
   + `fd`  --  已经打开的文件描述符
   + `fd2` --  需要重复打开的文件描述符
 + 返回值：
   + 成功
-  + 失败
+  + 失败 -->
+
++ 简介：
+  + dup2() 函数用于复制文件描述符，并将其复制到指定的目标文件描述符。通过 dup2() 函数，可以实现重定向文件描述符的功能
+
++ 原型：
+```cpp
+#include <unistd.h>
+int dup2(int oldfd, int newfd);
+```
+
++ 参数：
+  + oldfd：要复制的旧文件描述符。
+  + newfd：要复制到的新文件描述符。
+
++ 返回值：
+  + 如果复制成功，返回新的文件描述符。
+  + 如果复制失败，返回 -1，并设置 errno 错误码
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <unistd.h>
+#include <fcntl.h>
+
+int main() {
+    int oldfd = open("input.txt", O_RDONLY); // 打开旧文件描述符
+    int newfd = 3; // 新文件描述符
+
+    int result = dup2(oldfd, newfd); // 复制文件描述符
+    if (result == -1) {
+        perror("dup2");
+        return 1;
+    }
+
+    // 使用新的文件描述符读取数据
+    char buffer[100];
+    ssize_t bytesRead = read(newfd, buffer, sizeof(buffer) - 1);
+    if (bytesRead == -1) {
+        perror("read");
+        return 1;
+    }
+    buffer[bytesRead] = '\0';
+
+    printf("读取的数据：%s\n", buffer);
+
+    close(oldfd); // 关闭旧文件描述符
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，首先通过 open() 函数打开一个文件，并获得旧的文件描述符 oldfd。然后，定义一个新的文件描述符 newfd，将其设置为 3
+  + 接下来，使用 dup2(oldfd, newfd) 函数将旧文件描述符复制到新的文件描述符。如果复制成功，dup2() 函数将返回新的文件描述符
+  + 在示例中，我们使用新的文件描述符 newfd 执行 read() 函数，读取数据到缓冲区 buffer 中，并在末尾添加字符串终止符。最后，我们打印读取的数据。
+  + 需要注意的是，dup2() 函数会关闭新的文件描述符（如果它已经打开）。因此，在使用 dup2() 函数之前，应确保新的文件描述符没有被使用或需要关闭
+  + 另外，通过使用 dup2() 函数，还可以实现重定向标准输入、输出和错误的功能。例如，将标准输出重定向到文件中可以使用 dup2(fileDescriptor, STDOUT_FILENO)
+  + 总结而言，dup2() 函数是一个用于复制文件描述符的函数，可以将一个文件描述符复制到另一个指定的文件描述符。通过 dup2() 函数，可以实现文件描述符的重定向和复制功能
+
+---
 
 ## write()
 
@@ -607,27 +801,104 @@ int main() {
 
 ## dirname()
 
-+ 简述：返回`path`的目录部分，如果没有可用的，就返回`.`
+<!-- + 简述：返回`path`的目录部分，如果没有可用的，就返回`.`
 + 声明：`char* dirname(char *path);`
 + 参数：
   + `path`  --  需要查找目录的文件
 + 返回值：
   + 成功  --  文件所在的目录
-  + 失败  --  
+  + 失败  --   -->
+
++ 简介：
+  + dirname() 函数用于提取路径字符串中的目录部分。它返回一个新的字符串，其中包含给定路径的目录部分
+
++ 原型：
+```cpp
+#include <libgen.h>
+char* dirname(char* path);
+```
+
++ 参数：
+  + path : 要提取目录的路径字符串
+
++ 返回值：
+  + 返回一个指向目录部分的字符串的指针。
+  + 如果路径不包含目录部分（如根目录 / 或空路径），则返回一个句点 .
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <libgen.h>
+
+int main() {
+    char path[] = "/usr/local/bin/executable";
+    char* dir = dirname(path);
+    
+    printf("目录部分：%s\n", dir);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，使用 dirname() 函数从路径字符串 /usr/local/bin/executable 中提取目录部分。然后，将返回的目录字符串 dir 打印出来
+  + dirname() 函数在头文件 libgen.h 中声明，并且是一个标准库函数。它会修改传入的路径字符串，并返回指向目录部分的指针。注意，传入的路径字符串应为可修改的字符数组（C 字符串），而不是字符串常量
+  + 需要注意的是，dirname() 函数的操作是基于路径字符串的规则来进行的，它不会检查目录是否存在或路径是否有效。它只是从给定的路径字符串中提取目录部分，并返回一个新的字符串
+  + 另外，由于 dirname() 函数会修改传入的路径字符串，所以如果需要保留原始路径字符串，应在调用 dirname() 函数之前创建一个副本
+  + 总结而言，dirname() 函数是一个用于提取路径字符串中目录部分的函数。它可以帮助您从路径字符串中获取目录信息，以便进行进一步的处理
 
 ## basename()
 
-+ 简述：去掉文件`pathfile`的前缀，只保存文件名(input string:/data/test.cpp , output string:test.cpp)
+<!-- + 简述：去掉文件`pathfile`的前缀，只保存文件名(input string:/data/test.cpp , output string:test.cpp)
 + 声明：`char* basename(char *pathfile);`
 + 参数：
   + `pathfile`  --  需要操作的文件
 + 返回值：
   + 成功  --  文件名
-  + 失败  --  
+  + 失败  --   -->
+
++ 简介：
+  + basename() 函数用于提取路径字符串中的文件名部分。它返回一个新的字符串，其中包含给定路径的文件名部分
+
++ 原型：
+```cpp
+#include <libgen.h>
+char* basename(char* path);
+```
+
++ 参数：
+  + path : 要提取文件名的路径字符串。
+
++ 返回值：
+  + 返回一个指向文件名部分的字符串的指针
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <libgen.h>
+
+int main() {
+    char path[] = "/usr/local/bin/executable";
+    char* file = basename(path);
+    
+    printf("文件名部分：%s\n", file);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，使用 basename() 函数从路径字符串 /usr/local/bin/executable 中提取文件名部分。然后，将返回的文件名字符串 file 打印出来。
+  + basename() 函数在头文件 libgen.h 中声明，并且是一个标准库函数。它会修改传入的路径字符串，并返回指向文件名部分的指针。注意，传入的路径字符串应为可修改的字符数组（C 字符串），而不是字符串常量
+  + 需要注意的是，basename() 函数的操作是基于路径字符串的规则来进行的，它不会检查文件是否存在或路径是否有效。它只是从给定的路径字符串中提取文件名部分，并返回一个新的字符串。
+  + 另外，由于 basename() 函数会修改传入的路径字符串，所以如果需要保留原始路径字符串，应在调用 basename() 函数之前创建一个副本。
+  + 总结而言，basename() 函数是一个用于提取路径字符串中文件名部分的函数。它可以帮助您从路径字符串中获取文件名信息，以便进行进一步的处理。
+
+---
 
 ## readlink()
 
-+ 简述：
+<!-- + 简述：
   + readlink()会将参数path的 符号链接内容存储到参数buf所指的内存空间，返回的内容不是以\000作字符串结尾，但会将字符串的字符数返回，这使得添加\000变得简单。
   + 若参数bufsiz小于符号连接的内容长度，过长的内容会被截断，如果 readlink 第一个参数指向一个文件而不是 符号链接时，readlink 设 置errno 为 EINVAL 并返回 -1。 
   + readlink()函数组合了open()、read()和close()的所有操作
@@ -641,7 +912,57 @@ int main() {
   + 失败  --  -1
 + 注意：
   + Linux系统中有一个符号链接 `/proc/self/exe` -- 它代表当前程序
-  + **所以可以使用`readlink()`读取它的源路径就可以获取当前程序的绝对路径**
+  + **所以可以使用`readlink()`读取它的源路径就可以获取当前程序的绝对路径** -->
+
++ 简介：
+  + readlink() 函数用于读取符号链接文件的目标路径。它可以帮助我们获取符号链接文件所指向的实际文件或目录
+
++ 原型：
+```cpp
+#include <unistd.h>
+ssize_t readlink(const char* path, char* buf, size_t bufsiz);
+```
+
++ 参数：
+  + path：符号链接文件的路径。
+  + buf：用于存储目标路径的缓冲区。
+  + bufsiz：缓冲区的大小
+
++ 返回值：
+  + 如果读取成功，返回实际读取的字节数。
+  + 如果读取失败，返回 -1，并设置 errno 错误码
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <unistd.h>
+
+int main() {
+    char path[] = "symlink.txt";
+    char target[100];
+    
+    ssize_t len = readlink(path, target, sizeof(target) - 1);
+    if (len == -1) {
+        perror("readlink");
+        return 1;
+    }
+    
+    target[len] = '\0';
+    
+    printf("符号链接 %s 的目标路径是：%s\n", path, target);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上面的示例中，我们使用 readlink() 函数读取名为 "symlink.txt" 的符号链接文件的目标路径。我们提供一个缓冲区 target 来存储目标路径，并指定缓冲区的大小
+  + 如果读取成功，readlink() 函数返回实际读取的字节数，并将目标路径存储在缓冲区 target 中。我们在目标路径末尾添加了字符串终止符，以确保字符串的正确性。
+  + 需要注意的是，readlink() 函数要求传入的路径是符号链接文件的路径，而不是目标文件的路径。如果路径不是符号链接文件，或者符号链接文件不存在，readlink() 函数将返回 -1，并设置适当的错误码
+  + 此外，为了避免缓冲区溢出，我们应该根据实际情况来确定缓冲区的大小，并在调用 readlink() 函数之前确保缓冲区足够大
+  + 总结而言，readlink() 函数是一个用于读取符号链接文件目标路径的函数。它可以帮助我们获取符号链接文件所指向的实际文件或目录
+
+---
 
 ## strdup()
 
