--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,81 @@
 
 + C++ 相关的理论基础知识
 
+## C++ 函数重载 需要用到virtual关键字吗
+
+在 C++ 中，函数重载不需要使用 `virtual` 关键字。虚函数和函数重载是两个不同的概念。
+
+函数重载是指在同一个作用域内定义多个具有相同名称但参数列表不同的函数。编译器会根据函数的参数列表来确定调用哪个函数。
+
+虚函数是为了实现运行时多态性而引入的概念。通过在基类中声明虚函数，并在派生类中进行重写，可以实现在运行时确定调用哪个函数。虚函数需要使用 `virtual` 关键字进行声明。
+
+下面是一个示例，展示了函数重载和虚函数的区别：
+
+```cpp
+#include <iostream>
+
+class Base {
+public:
+    void foo() {
+        std::cout << "Base::foo() called" << std::endl;
+    }
+
+    virtual void bar() {
+        std::cout << "Base::bar() called" << std::endl;
+    }
+};
+
+class Derived : public Base {
+public:
+    void foo(int x) {
+        std::cout << "Derived::foo(int) called" << std::endl;
+    }
+
+    void bar() override {
+        std::cout << "Derived::bar() called" << std::endl;
+    }
+};
+
+int main() {
+    Base base;
+    Derived derived;
+
+    base.foo();      // 调用 Base::foo()
+    derived.foo();   // 调用 Base::foo()，因为 Derived 没有重载 Base::foo()
+
+    base.bar();      // 调用 Base::bar()
+    derived.bar();   // 调用 Derived::bar()
+
+    return 0;
+}
+```
+
+在上面的示例中，`Base` 类定义了 `foo()` 和 `bar()` 两个函数，`Derived` 类继承自 `Base` 类并重写了 `bar()` 函数，并新增了一个 `foo(int)` 函数。当调用 `foo()` 时，根据参数列表的不同，编译器会选择调用对应的函数。而当调用 `bar()` 时，由于它是一个虚函数并且被派生类重写了，实际执行的函数取决于运行时对象的类型，实现了多态性。
+
+因此，总结起来，函数重载和虚函数是两个不同的概念，在函数重载时不需要使用 `virtual` 关键字。
+
+---
+
+## 多态
+
+多态是面向对象程序设计中的一个重要概念，它允许使用基类的指针或引用调用派生类的成员函数，实现在运行时动态地确定所调用的具体函数。在 C++ 中，多态通过虚函数和指针或引用来实现。
+
+下面是关于 C++ 多态的一些详细解释：
+
+1. **虚函数**：虚函数是在基类中声明的，用关键字 `virtual` 标识的成员函数。派生类可以重写（覆盖）基类的虚函数，并根据自己的需要重新实现功能。虚函数通过在运行时动态绑定，使得基类的指针或引用可以在运行时调用派生类的实现。
+
+2. **动态绑定**：当基类指针或引用指向派生类对象时，通过虚函数的动态绑定，可以在运行时确定要调用的实际函数。这意味着可以通过基类指针或引用调用派生类的虚函数，而不需要在编译时知道对象的具体类型。
+
+3. **多态性**：多态性是指在运行时根据对象的实际类型来确定所调用的函数。通过多态性，可以实现以统一的方式处理不同类型的对象，并根据对象的实际类型来调用适当的函数。这种灵活性和可扩展性使得代码更加模块化和可重用。
+
+4. **虚函数表**：虚函数表（vtable）是一张存储虚函数地址的表格，每个类（包括基类和派生类）都有自己的虚函数表。当类中有虚函数时，编译器会在对象的内存布局中添加一个指向虚函数表的指针。通过这个指针，可以在运行时查找并调用正确的虚函数。
+
+5. **纯虚函数和抽象类**：纯虚函数是一种没有函数体的虚函数，在基类中声明并赋予 `= 0` 的值。它要求派生类必须实现该函数。包含纯虚函数的类称为抽象类，抽象类不能被实例化，只能作为接口或基类使用。
+
+多态性在面向对象程序设计中具有重要意义，它提供了代码的灵活性、可扩展性和可维护性。通过使用虚函数和动态绑定，可以编写出更具弹性和可重用性的代码，使得程序更加易于扩展和修改。
+
+---
+
 ## std::map 
 
 C++11 中的 `std::map` 是一个关联容器，它提供了一种键值对的映射关系。`std::map` 使用红黑树数据结构实现，保证了插入、查找和删除操作的平均时间复杂度为 O(log n)。
