--- a/CPP/C-C++02_常用函数.md
+++ b/CPP/C-C++02_常用函数.md
@@ -2,6 +2,38 @@
 
 + 常用函数，大部分为C函数
 
+## mlockall
+
++ 简介：
+  + mlockall() 是一个函数，它用于将进程的内存锁定在物理内存中，防止被换出到磁盘交换空间
+
++ 原型：
+```cpp
+#include <sys/mman.h>
+
+int mlockall(int flags);
+```
+
++ 参数：
+  + flags：指定锁定内存的选项。可以是以下值的按位或
+    + MCL_CURRENT：锁定当前进程的地址空间中的所有内存。
+    + MCL_FUTURE：锁定当前进程在将来动态分配的内存
+
++ 返回值：
+  + 成功时，返回0；
+  + 失败时，返回-1，并设置 errno 表示错误原因
+
++ 详解：
+  + mlockall() 函数用于在内存敏感的应用程序中确保关键数据或代码保持在物理内存中，以提高访问速度和可靠性
+  + 调用 mlockall() 后，指定选项的内存将被锁定，不会被交换到磁盘上的交换空间
+  + 锁定内存可能需要特权权限，通常只有具有足够权限的进程才能成功调用 mlockall() 函数
+  + 当不再需要锁定内存时，可以使用 munlockall() 函数来解锁内存
+
++ 注：
+  + 需要注意的是，使用 mlockall() 函数需要谨慎，因为过度锁定内存可能导致系统资源不足，并影响整体性能。仅在确实需要将关键数据保留在物理内存中并且有足够的系统资源时才应使用该函数
+
+---
+
 ## popen
 
 + 简介：
@@ -1096,7 +1128,7 @@ int main() {
 
 ## clock_gettime()
 
-+ 简述：获取当前时钟的时间，并保存到参数`tp`
+<!-- + 简述：获取当前时钟的时间，并保存到参数`tp`
 + 声明：`int clock_gettime(clockid_t clock_id, struct timespec *tp);`
 + 参数：
   + `clock_id`  --  时钟ID
@@ -1105,7 +1137,63 @@ int main() {
   + 成功  --  
   + 失败  -- 
 + 需求：
-  + 头文件：`#include <time.h>`
+  + 头文件：`#include <time.h>` -->
+
++ 简介：
+  + clock_gettime() 是一个 C 标准库函数，用于获取系统时钟的时间值。它提供了更高分辨率的时间测量，可以用于精确计时和性能分析
+
++ 原型：
+```cpp
+#include <time.h>
+
+int clock_gettime(clockid_t clk_id, struct timespec *tp);
+```
+
++ 参数：
+  + clk_id：一个表示时钟源的标识符，指定要获取时间值的时钟。常见的时钟源包括
+    + CLOCK_REALTIME：表示实时时钟，可用于获取实际时间。
+    + CLOCK_MONOTONIC：表示单调时钟，可用于测量经过的时间，不受系统时间的影响。
+    + CLOCK_PROCESS_CPUTIME_ID：表示与当前进程相关的 CPU 时间。
+    + CLOCK_THREAD_CPUTIME_ID：表示与当前线程相关的 CPU 时间
+  + tp：一个指向 struct timespec 结构的指针，用于存储获取的时间值
+
++ 返回值：
+  + 成功时，返回 0。
+  + 失败时，返回 -1，并设置 errno 变量表示错误的原因
+
++ 详解：
+  + clock_gettime() 函数用于获取指定时钟源的时间值。
+  + 要使用 clock_gettime() 函数，需要包含头文件 <time.h>。
+  + 通过指定不同的时钟源，可以获取不同类型的时间值，如实际时间、单调时间或 CPU 时间。
+  + 时间值以 struct timespec 结构的形式返回，该结构包含了秒数和纳秒数的值。
+  + clock_gettime() 函数提供了更高精度的时间测量，相比于传统的 time() 函数，可以提供更精确的时间分辨率。
+  + 具体可用的时钟源和支持的精度可能因操作系统而异
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <time.h>
+
+int main() {
+    struct timespec tp;
+    
+    // 获取实时时钟的时间值
+    if (clock_gettime(CLOCK_REALTIME, &tp) == -1) {
+        perror("clock_gettime");
+        return 1;
+    }
+
+    // 输出时间值的秒数和纳秒数
+    printf("Seconds: %ld\n", tp.tv_sec);
+    printf("Nanoseconds: %ld\n", tp.tv_nsec);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在此示例中，我们使用 clock_gettime() 函数获取实时时钟的时间值，并将结果存储在 struct timespec 结构 tp 中。然后，我们将秒数和纳秒数分别打印出来
+  + 需要注意的是，不同的操作系统可能支持不同的时钟源和精度，并且可能会受到系统时钟的限制。因此，在使用 clock_gettime() 函数时，应该查阅相关文档并了解操作系统的特定行为。
 
 ## getline()
 
@@ -1833,14 +1921,66 @@ int main() {
 
 ## memset()
 
-+ 简述：将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
+<!-- + 简述：将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
 + 声明：`void* memset(void* ptr, int value, size_t num);`
 + 参数
   + `ptr` -- 指向要填充的内存块的指针
   + `value` -- 要设置的值。该值作为int传递，但是该函数使用该值的转换的无符号字符填充内存块
   + `num` -- 要设置为值的字节数。`size_t`是无符号整数类型
 + 返回值
-  + 返回`ptr`
+  + 返回`ptr` -->
+
++ 简介：
+  + memset() 是 C 标准库中的一个函数，用于将一块内存区域的每个字节设置为指定的值
+
++ 原型：
+```cpp
+#include <string.h>
+
+void *memset(void *ptr, int value, size_t num);
+```
+
++ 参数：
+  + ptr：指向要填充的内存区域的起始地址的指针。
+  + value：要设置的值，以 int 类型表示。
+  + num：要设置的字节数，即要填充的内存区域的大小
+
++ 返回值：
+  + 返回 ptr 的指针
+
++ 详解：
+  + memset() 函数用于将一块内存区域的每个字节设置为指定的值。
+  + 要使用 memset() 函数，需要包含头文件 <string.h>。
+  + ptr 是一个指向要填充的内存区域的指针，可以是任何类型的指针。
+  + value 是要设置的值，可以是 int 类型的任何有效值。通常使用 0 或 -1（表示全部位设置为 1）来初始化内存区域。
+  + num 表示要填充的字节数，即要设置的内存区域的大小。
+  + memset() 函数将指定的值复制到内存区域中的每个字节，可以用来初始化数组、清除敏感数据等。
+  + 返回的指针与 ptr 相同，指向被填充的内存区域的起始地址
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+    int arr[5];
+
+    // 使用 memset() 将数组元素设置为 0
+    memset(arr, 0, sizeof(arr));
+
+    // 打印数组元素
+    for (int i = 0; i < 5; i++) {
+        printf("%d ", arr[i]);
+    }
+    printf("\n");
+
+    return 0;
+}
+```
+
++ 注：
+  + 在此示例中，我们声明了一个包含 5 个整型元素的数组 arr。然后，我们使用 memset() 函数将数组的所有元素设置为零，通过将指向数组的指针、要设置的值（0）、以及要填充的字节数（sizeof(arr)）传递给 memset() 函数来实现。最后，我们打印数组的元素，可以看到它们都被设置为零
+  + 需要注意的是，使用 memset() 函数时要小心，确保不会超出要填充的内存区域的边界。同时，对于包含非 char 类型元素的数组，使用 memset() 函数进行初始化时要确保所设置的值类型正确，避免产生类型不匹配的问题
 
 ## max()
 
