--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -2,6 +2,190 @@
 
 + 常用函数，大部分为C++函数
 
+## clock_nanosleep
+
++ 简介：
+  + clock_nanosleep() 是一个 C 标准库函数，用于将进程挂起指定的时间长度。它提供了更高精度的休眠功能，可以以纳秒级的精度控制休眠时间
+
++ 原型：
+```cpp
+#include <time.h>
+
+int clock_nanosleep(clockid_t clock_id, int flags, const struct timespec *request, struct timespec *remain);
+```
+
++ 参数：
+  + clock_id：一个表示时钟源的标识符，指定用于计算时间的时钟。常见的时钟源包括
+    + CLOCK_REALTIME：实时时钟，表示实际时间。
+    + CLOCK_MONOTONIC：单调时钟，表示经过的时间，不受系统时间的影响
+  + flags：用于指定 clock_nanosleep() 函数的行为标志。可以为以下常量的按位或（bitwise OR）组合
+    + TIMER_ABSTIME：指定 request 参数为绝对时间值，而不是相对于当前时间的相对时间值。
+  + request：指定休眠的时间长度，以 struct timespec 结构表示，包括秒数和纳秒数
+  + remain：用于返回剩余的休眠时间（如果休眠被中断）
+
++ 返回值：
+  + 如果休眠时间已经完全过去，则返回 0。
+  + 如果休眠被中断，返回 -1，并设置 remain 参数为剩余的休眠时间。
+  + 如果发生错误，返回 -1，并设置 errno 变量表示错误的原因
+
++ 详解：
+  + clock_nanosleep() 函数用于将进程挂起指定的时间长度。
+  + 要使用 clock_nanosleep() 函数，需要包含头文件 <time.h>。
+  + 休眠时间可以是相对时间值（相对于当前时间的长度）或绝对时间值（指定具体的时间点）。
+  + 使用 clock_id 参数指定要使用的时钟源，从而确定时间的基准。
+  + request 参数指定要休眠的时间长度，以秒数和纳秒数表示。
+  + 如果指定了 TIMER_ABSTIME 标志，request 参数被视为绝对时间值，而不是相对时间值。
+  + 如果休眠时间已经完全过去，函数返回 0。如果休眠被中断，则返回 -1，并通过 remain 参数返回剩余的休眠时间。
+  + 返回的剩余休眠时间可以用于重新调用 clock_nanosleep() 函数，以继续休眠。
+  + 使用 clock_nanosleep() 函数可以实现更高精度的休眠，比传统的 sleep() 函数提供更细致的时间控制
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <time.h>
+
+int main() {
+    struct timespec req;
+    req.tv_sec = 1;         // 休眠 1 秒
+    req.tv_nsec = 500000000; // 休眠 500 毫秒
+
+    int result = clock_nanosleep(CLOCK_MONOTONIC, 0, &req, NULL);
+    if (result == 0) {
+        printf("休眠时间已过。\n");
+    } else if (result == -1) {
+        printf("休眠被中断。\n");
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 在此示例中，我们创建了一个 struct timespec 结构 req，指定要休眠的时间为 1 秒 500 毫秒。然后，我们调用 clock_nanosleep() 函数，将 CLOCK_MONOTONIC 作为时钟源，并传递 req 结构作为休眠时间的请求。根据函数的返回值，我们打印相应的消息，指示休眠是否已经完全过去或被中断
+  + 需要注意的是，由于 clock_nanosleep() 提供了更高精度的休眠控制，但在使用时需要注意兼容性和平台特定的差异
+
+## signal
+
++ 简介：
+  + signal() 是一个 C 标准库函数，用于捕捉和处理信号。信号是在操作系统中用于通知进程发生某个事件的机制
+
++ 原型：
+```cpp
+#include <signal.h>
+
+void (*signal(int signum, void (*handler)(int)))(int);
+```
+
++ 参数：
+  + signum：一个整数，表示要捕捉的信号的编号。常见的信号包括 SIGINT（中断信号）和 SIGTERM（终止信号），还有其他许多可用的信号。
+  + handler：一个函数指针，指向一个处理信号的函数。函数的类型为 void (*)(int)，它接受一个整数作为参数，并返回 void
+
++ 返回值：
+  + 返回一个函数指针，指向以前与 signum 相关联的信号处理函数。如果以前没有设置过信号处理函数，则返回 SIG_DFL（默认信号处理）或 SIG_IGN（忽略信号）
+
++ 详解：
+  + signal() 函数用于为指定的信号 signum 设置信号处理函数 handler。
+  + 要使用 signal() 函数，需要包含头文件 <signal.h>。
+  + 通过设置信号处理函数，可以在程序中对特定的信号做出相应的操作，例如捕捉 SIGINT 信号以处理用户中断操作。
+  + 当进程接收到指定的信号时，系统将调用与之相关联的信号处理函数来处理该信号。
+  + 信号处理函数可以是用户自定义的函数，用于执行特定的操作，或者可以是 SIG_DFL（默认信号处理）或 SIG_IGN（忽略信号）。
+
++ 原型：
+```cpp
+#include <stdio.h>
+#include <signal.h>
+
+// 信号处理函数
+void sigintHandler(int signum) {
+    printf("Received SIGINT signal. Exiting...\n");
+    // 在此处执行清理操作或其他必要的处理
+    // 例如关闭文件、释放资源等
+
+    // 退出程序
+    exit(signum);
+}
+
+int main() {
+    // 设置 SIGINT 信号的处理函数为 sigintHandler
+    signal(SIGINT, sigintHandler);
+
+    // 进入主循环
+    while (1) {
+        // 在此处执行主要的程序逻辑
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 在此示例中，我们定义了一个名为 sigintHandler() 的信号处理函数，用于处理 SIGINT 信号（通常是通过键盘输入 Ctrl+C 产生的）。在 main() 函数中，我们使用 signal() 函数将 SIGINT 信号与 sigintHandler() 函数关联起来。当程序接收到 SIGINT 信号时，将调用 sigintHandler() 函数来处理该信号，并在处理函数中执行相应的操作。在此示例中，我们简单地打印一条消息并退出程序
+
+---
+
+## setpriority
+
++ 简介：
+  + setpriority() 是一个 C 标准库函数，用于设置进程的调度优先级。通过调整进程的调度优先级，可以影响操作系统对进程的调度顺序
+
++ 原型：
+```cpp
+#include <sys/time.h>
+#include <sys/resource.h>
+
+int setpriority(int which, id_t who, int prio);
+```
+
++ 参数：
+  + which：一个整数，指定要设置优先级的对象。可取以下值
+    + PRIO_PROCESS：设置进程的优先级。
+    + PRIO_PGRP：设置进程组的优先级。
+    + PRIO_USER：设置用户的所有进程的优先级
+  + who：一个整数，表示要设置优先级的对象的标识符。根据 which 参数的取值，可有不同的解释：
+    + 当 which 为 PRIO_PROCESS 时，who 是进程ID（PID）。
+    + 当 which 为 PRIO_PGRP 时，who 是进程组ID（PGID）。
+    + 当 which 为 PRIO_USER 时，who 是用户ID（UID）
+  + prio：一个整数，表示要设置的优先级。优先级的范围通常是 -20 到 19，其中 -20 表示最高优先级，19 表示最低优先级。
+
++ 返回值：
+  + 成功时，返回 0。
+  + 失败时，返回 -1，并设置 errno 变量表示错误的原因
+
++ 详解：
+  + setpriority() 函数用于设置进程的调度优先级。
+  + 要使用 setpriority() 函数，需要包含头文件 <sys/time.h> 和 <sys/resource.h>。
+  + 进程的调度优先级影响了操作系统对进程的调度顺序。更高的优先级意味着进程更有可能被操作系统选择进行执行。
+  + setpriority() 函数需要适当的权限来设置进程的优先级。通常，只有超级用户（root）或具有特权的用户才能更改其他进程的优先级。
+  + 可以使用 getpriority() 函数来获取进程的当前优先级。
+  + 设置进程的优先级可能会受到操作系统和调度器的限制，具体的行为可能因操作系统的实现而异
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <sys/time.h>
+#include <sys/resource.h>
+
+int main() {
+    // 获取当前进程ID
+    pid_t pid = getpid();
+
+    // 设置进程的优先级为最高优先级
+    int priority = -20;
+    int result = setpriority(PRIO_PROCESS, pid, priority);
+    if (result == -1) {
+        perror("setpriority");
+        return 1;
+    }
+
+    printf("Process priority set to %d\n", priority);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在此示例中，我们使用 setpriority() 函数将当前进程的优先级设置为最高优先级（-20）。请注意，设置进程的优先级可能需要适当的权限，并且对于不同的操作系统和调度器，行为可能会有所不同。因此，具体的效果和行为可能因系统而异
+
 ## std::uniform_int_distribution
 
 `std::uniform_int_distribution`是C++标准库中的一个分布类，用于生成指定范围内的均匀分布的整数随机数。
@@ -1316,7 +1500,7 @@ int main() {
 
 ## getpid()
 
-+ 功能：返回进程ID
+<!-- + 功能：返回进程ID
 + 原型：`pid_t getpid(void);`
 + 参数：无
 + 返回值：
@@ -1326,7 +1510,41 @@ int main() {
   + 头文件：`#include <unistd.h>`
 + 注意：
   + `pid_t`是用来表示进程ID的一个无符号整数类型
-  + `getpid`函数不能返回错误
+  + `getpid`函数不能返回错误 -->
+
++ 简介：
+  + getpid() 是一个 C 标准库函数，用于获取当前进程的进程ID（Process ID）
+
++ 原型：
+```cpp
+#include <sys/types.h>
+#include <unistd.h>
+
+pid_t getpid(void);
+```
+
++ 返回值：
+  + 返回一个整数值，表示当前进程的进程ID
+
++ 详解：
+  + getpid() 函数用于获取当前进程的进程ID，进程ID是一个唯一标识符，用于在系统中唯一地标识一个进程。
+  + 该函数属于 POSIX 标准，并可在大多数操作系统上使用，如 Linux、Unix 和 macOS。
+  + 要使用 getpid() 函数，需要包含头文件 <sys/types.h> 和 <unistd.h>。
+  + 通过调用 getpid() 函数，可以在程序中获取当前进程的进程ID，并在需要时进行处理或记录
+  + 需要注意的是，进程ID是由操作系统分配和管理的，它在进程的生命周期中保持不变。每个进程都有一个唯一的进程ID，可以用于识别和跟踪进程。在多进程环境中，使用 getpid() 函数可以帮助确定不同进程之间的执行路径和行为
+
++ 示例：
+```cpp
+#include <stdio.h>
+#include <sys/types.h>
+#include <unistd.h>
+
+int main() {
+    pid_t pid = getpid();
+    printf("Process ID: %d\n", pid);
+    return 0;
+}
+```
 
 ## getppid()
 
