update cpp module

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,30 @@
 
 + C++ 相关的理论基础知识
 
+## char 关键字
+
+在C++中，`char`是一种基本数据类型，用于表示字符型数据。与C语言中的`char`类型相似，C++的`char`关键字也具有以下特点和用途：
+
+1. 存储单个字符：`char`用于存储单个字符，可以包括字母、数字、符号和特殊字符。每个`char`变量占用1字节的内存空间（8位），用于存储一个字符的ASCII码或其他字符编码。
+
+2. 字符串的表示：通过将多个`char`变量排列在一起，可以表示字符串。字符串是由一系列字符组成的字符数组，以空字符`\0`作为结尾。例如，`char str[] = "Hello";`定义了一个字符数组`str`，存储了字符串"Hello"。
+
+3. 字符类型转换：`char`类型可以用于表示字符型数据，也可以与整数类型进行相互转换。例如，将一个整数转换为字符类型可以使用强制类型转换，如`char ch = static_cast<char>(65);`将整数值65转换为字符'A'。
+
+4. 标识符命名：`char`可以作为变量或函数的类型标识符，用于声明和定义字符型变量或函数。例如，`char ch;`声明了一个字符型变量`ch`。
+
+5. 输入和输出：`char`类型可以通过输入和输出流对象（如`cin`和`cout`）进行读取和打印。可以使用流提取运算符`>>`进行字符的输入，使用流插入运算符`<<`进行字符的输出。
+
+需要注意以下几点：
+
+- 字符类型使用单引号括起来，例如`'A'`表示字符'A'。
+- 字符串使用双引号括起来，例如`"Hello"`表示字符串"Hello"。
+- 在C++中，字符型数据以ASCII码或其他字符编码的方式进行存储和处理。
+
+总结：`char`关键字在C++中表示字符型数据，用于存储单个字符、表示字符串、进行字符类型转换和标识符命名。它是C++语言中最基本的数据类型之一，具有广泛的应用和作用。
+
+---
+
 ## C++ 函数重载 需要用到virtual关键字吗
 
 在 C++ 中，函数重载不需要使用 `virtual` 关键字。虚函数和函数重载是两个不同的概念。
@@ -74,6 +98,90 @@ int main() {
 5. **纯虚函数和抽象类**：纯虚函数是一种没有函数体的虚函数，在基类中声明并赋予 `= 0` 的值。它要求派生类必须实现该函数。包含纯虚函数的类称为抽象类，抽象类不能被实例化，只能作为接口或基类使用。
 
 多态性在面向对象程序设计中具有重要意义，它提供了代码的灵活性、可扩展性和可维护性。通过使用虚函数和动态绑定，可以编写出更具弹性和可重用性的代码，使得程序更加易于扩展和修改。
+
+
+## 多态 详解
+
+在C++中，多态性（Polymorphism）是面向对象编程的一个重要特性，它允许使用基类的指针或引用来调用派生类的成员函数。多态性使得程序可以根据对象的实际类型来确定调用的函数，从而实现代码的灵活性和可扩展性。
+
+C++中的多态性主要通过虚函数（Virtual Function）和运行时类型识别（Run-time Type Identification）来实现。
+
+1. 虚函数（Virtual Function）：在基类中声明虚函数，并在派生类中进行重写。使用虚函数可以使得通过基类指针或引用调用成员函数时，根据实际对象的类型来确定调用的函数。通过在函数声明前面加上`virtual`关键字来将其声明为虚函数。派生类中重写虚函数时使用`override`关键字进行标记。
+
+2. 运行时类型识别（Run-time Type Identification，RTTI）：C++提供了`dynamic_cast`和`typeid`操作符来获取对象的实际类型。`dynamic_cast`用于将基类指针或引用转换为派生类指针或引用，如果转换失败则返回`nullptr`。`typeid`用于获取对象的类型信息，返回`type_info`对象。
+
+多态性的使用可以带来以下几个优点：
+
+- 简化代码：通过使用基类指针或引用，可以减少代码的重复性，实现更加简洁和可维护的代码结构。
+- 扩展性：通过派生类的添加，可以在不修改已有代码的情况下扩展程序的功能。
+- 代码重用：通过将多个派生类对象归一化为基类指针或引用，可以实现代码的复用性。
+
+需要注意的是，多态性只适用于通过指针或引用访问对象的成员函数，而不适用于通过对象直接访问成员函数。
+
+总结：C++中的多态性是一种重要的面向对象编程特性，通过虚函数和运行时类型识别实现。它允许使用基类指针或引用来调用派生类的成员函数，根据对象的实际类型确定调用的函数，提供了代码的灵活性和可扩展性。多态性可以简化代码、实现代码的复用和扩展，并为面向对象编程带来更强大的特性。
+
+---
+
+## 多态 示例
+
+下面是一个简单的C++多态示例，展示了基类和派生类之间的多态性：
+
+```cpp
+#include <iostream>
+
+// 基类
+class Animal {
+public:
+    virtual void sound() {
+        std::cout << "动物发出声音" << std::endl;
+    }
+};
+
+// 派生类1
+class Dog : public Animal {
+public:
+    void sound() override {
+        std::cout << "狗在汪汪叫" << std::endl;
+    }
+};
+
+// 派生类2
+class Cat : public Animal {
+public:
+    void sound() override {
+        std::cout << "猫在喵喵叫" << std::endl;
+    }
+};
+
+int main() {
+    Animal* animal1 = new Dog();
+    Animal* animal2 = new Cat();
+
+    animal1->sound();  // 输出：狗在汪汪叫
+    animal2->sound();  // 输出：猫在喵喵叫
+
+    delete animal1;
+    delete animal2;
+
+    return 0;
+}
+```
+
+在上述示例中，我们定义了一个基类`Animal`和两个派生类`Dog`和`Cat`。基类中有一个虚函数`sound()`，并在派生类中进行了重写。
+
+在`main()`函数中，我们创建了基类指针`animal1`和`animal2`，分别指向`Dog`和`Cat`的对象。通过基类指针调用虚函数`sound()`，实际执行的是派生类中相应的函数。
+
+这种多态的特性使得我们可以通过基类指针或引用来访问派生类对象的成员函数，根据实际对象的类型来确定调用的函数。这样可以实现代码的灵活性和扩展性，使得程序可以适应不同类型的对象。
+
+运行上述示例，输出结果将是：
+```
+狗在汪汪叫
+猫在喵喵叫
+```
+
+这表明基类指针`animal1`和`animal2`在调用虚函数`sound()`时，分别执行了派生类`Dog`和`Cat`中重写的函数。
+
+这就是C++中多态的一个简单示例，通过基类和派生类之间的虚函数实现了运行时的多态性。
 
 ---
 
@@ -226,6 +334,50 @@ auto ptr3 = std::make_unique<int>(100);
 `std::unique_ptr` 在管理动态内存时提供了更高的安全性和便利性，可以避免内存泄漏和悬挂指针等问题。它是现代 C++ 中推荐使用的智能指针之一。
 
 需要注意的是，由于 `std::unique_ptr` 是独占所有权的，它不能与 C 风格的指针混用，并且需要避免多个 `std::unique_ptr` 指向同一个对象的情况，以避免悬挂指针的问题。
+
+---
+
+## std::unique_ptr 初始化
+
+在C++中，可以使用`std::unique_ptr`进行动态内存管理。`std::unique_ptr`是一个智能指针，用于管理动态分配的对象，并在其生命周期结束时自动释放内存。
+
+下面是几种常见的初始化`std::unique_ptr`的方式：
+
+1. 使用`new`关键字初始化：
+```cpp
+std::unique_ptr<int> ptr(new int);  // 初始化为指向动态分配的int对象的unique_ptr
+```
+
+2. 使用`std::make_unique`函数初始化（C++14及以上版本）：
+```cpp
+std::unique_ptr<int> ptr = std::make_unique<int>();  // 初始化为指向动态分配的int对象的unique_ptr
+```
+
+3. 使用自定义删除器（deleter）初始化：
+```cpp
+// 使用lambda表达式作为自定义删除器
+std::unique_ptr<int, void(*)(int*)> ptr(new int, [](int* p) {
+    delete p;
+});
+
+// 使用函数指针作为自定义删除器
+void deleter(int* p) {
+    delete p;
+}
+std::unique_ptr<int, void(*)(int*)> ptr(new int, deleter);
+```
+
+4. 初始化为`nullptr`或空指针：
+```cpp
+std::unique_ptr<int> ptr(nullptr);  // 初始化为空指针的unique_ptr
+std::unique_ptr<int> ptr;  // 默认初始化为空指针的unique_ptr
+```
+
+需要注意的是，`std::unique_ptr`具有独占权（exclusive ownership），即同一时间只能有一个`std::unique_ptr`指向同一块内存。它不允许进行复制操作，但可以进行移动操作。
+
+另外，推荐使用`std::make_unique`函数进行初始化，因为它更加安全和方便，可以避免手动管理内存分配和释放的问题。
+
+以上是一些常见的`std::unique_ptr`初始化方式，可以根据具体的需求选择适合的初始化方法。
 
 ---
 
